--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,1 +1,38 @@
+name: CI CD pipeline for strapi api
+on: 
+  push:
+    branches:
+      - main
+jobs:
+  Build_Docker_image:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      -
+        name: Set up docker
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Setting up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login into Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      -
+        name: Build and push the docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME}}/strapi:${{ github.run_number }}
+  deploy:
+     runs-on: self-hosted 
+     needs: Build_Docker_image
+     steps:
+       - name: pull the docker image
+         run: docker image pull ${{ secrets.DOCKERHUB_USERNAME }}/strapi:${{ github.run_number }}  
 
+       - name: Run the docker container
+         run: docker container run -d -p 3000:1337 ${{ secrets.DOCKERHUB_USERNAME }}/strapi:${{ github.run_number }}        
